<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView_menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/menu_1"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g2"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView_g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/menu_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g3"
        app:layout_constraintEnd_toEndOf="@+id/textView_g1"
        app:layout_constraintStart_toStartOf="@+id/textView_g1"
        app:layout_constraintTop_toBottomOf="@+id/textView_g1" />

    <TextView
        android:id="@+id/textView_g3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/menu_3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g4"
        app:layout_constraintEnd_toEndOf="@+id/textView_g2"
        app:layout_constraintStart_toStartOf="@+id/textView_g2"
        app:layout_constraintTop_toBottomOf="@+id/textView_g2" />

    <TextView
        android:id="@+id/textView_g4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/menu_4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g5"
        app:layout_constraintEnd_toEndOf="@+id/textView_g3"
        app:layout_constraintStart_toStartOf="@+id/textView_g3"
        app:layout_constraintTop_toBottomOf="@+id/textView_g3" />

    <TextView
        android:id="@+id/textView_g5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/menu_5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g6"
        app:layout_constraintEnd_toEndOf="@+id/textView_g4"
        app:layout_constraintStart_toStartOf="@+id/textView_g4"
        app:layout_constraintTop_toBottomOf="@+id/textView_g4" />

    <TextView
        android:id="@+id/textView_g6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/menu6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g7"
        app:layout_constraintEnd_toEndOf="@+id/textView_g5"
        app:layout_constraintStart_toStartOf="@+id/textView_g5"
        app:layout_constraintTop_toBottomOf="@+id/textView_g5" />

    <TextView
        android:id="@+id/textView_g7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:text="@string/menu_7"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_g6"
        app:layout_constraintStart_toStartOf="@+id/textView_g6"
        app:layout_constraintTop_toBottomOf="@+id/textView_g6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/menu"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView_g1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>